--- a/APPVIEW/Views/Shared/_LayoutWeb.cshtml
+++ b/APPVIEW/Views/Shared/_LayoutWeb.cshtml
@@ -1,4 +1,5 @@
-﻿﻿@{
+﻿
+﻿@{
     var IdUser = ((System.Security.Claims.ClaimsIdentity)User.Identity).FindFirst("Id");
     string Id_userValue = IdUser?.Value;
 
@@ -31,6 +32,7 @@
 
 </head>
 <body>
+    
     <!--================ Start Header Menu Area =================-->
     <header class="header_area">
         <div class="main_menu">
@@ -290,7 +292,7 @@
     </footer>
     <!--================ End footer Area  =================-->
 
-
+    <script src="~/js/site.js"></script>
 
     <script src="~/contentwebb/vendors/jquery/jquery-3.2.1.min.js"></script>
     <script src="~/contentwebb/js/main.js"></script>
