--- a/APPVIEW/Views/Role/GetList.cshtml
+++ b/APPVIEW/Views/Role/GetList.cshtml
@@ -6,6 +6,9 @@
     int stt = 0;
 }
 
+<form asp-action="Search" method="get" class="form-inline">
+    <input placeholder="Role Search" type="text" name="searchTerm" id="searchTerm" /><button>Tìm</button>
+</form>
 
 <div class="card">
     <div class="card-header">
