--- a/APPVIEW/Views/Voucher/GetList.cshtml
+++ b/APPVIEW/Views/Voucher/GetList.cshtml
@@ -10,6 +10,10 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+<form asp-action="Search" method="get" class="form-inline">
+    <input placeholder="Voucher Search" type="text" name="searchTerm" id="searchTerm" /><button>Tìm</button>
+</form>
+
 <table class="table">
     <thead>
         <tr>
