--- a/APPVIEW/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/APPVIEW/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -166,7 +166,11 @@
                             </li>
                             <li class="menu-item">
                                 <a href="~/QLBills/ShowBillXacNhan" class="menu-link">
-                                    <div data-i18n="Without menu">Hóa Đơn đã Xác Nhận</div>
+                                    <div data-i18n="Without menu">Hóa Đơn Đã Xác Nhận</div>
+                                </a>
+                            </li>  <li class="menu-item">
+                                <a href="~/QLBills/DonHuy" class="menu-link">
+                                    <div data-i18n="Without menu">Hóa Đơn Chờ Xác Nhận Hủy</div>
                                 </a>
                             </li>
                             <li class="menu-item">
