--- a/APPVIEW/Views/Home/ViewBill.cshtml
+++ b/APPVIEW/Views/Home/ViewBill.cshtml
@@ -2,11 +2,12 @@
     ViewData["Title"] = "ViewBill";
     Layout = "~/Views/Shared/_LayoutWeb.cshtml";
     Guid id;
+    ViewBag.Tinh = "";
 }
 
 
 
-<div class="col-md-6 col-lg-4 col-xl-3">
+@* <div class="col-md-6 col-lg-4 col-xl-3">
     <div class="card text-center card-product">
         <div class="card-product__img">
             <img class="card-img" src="~/contentwebb/img/product/product1.png" alt="">
@@ -74,4 +75,307 @@
 
     </div>
 </div>
+ *@
 
+
+
+
+<!-- ================ start banner area ================= -->
+<section class="blog-banner-area" id="category">
+    <div class="container h-100">
+        <div class="blog-banner">
+            <div class="text-center">
+                <h1>Product Checkout</h1>
+                <nav aria-label="breadcrumb" class="banner-breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="~/home/index">Home</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">Checkout</li>
+                    </ol>
+                </nav>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- ================ end banner area ================= -->
+<!--================Checkout Area =================-->
+<section class="checkout_area section-margin--small">
+    <div class="container">
+        
+        <div class="billing_details">
+            <div class="row">
+
+                <div class="col-lg-8">
+                    <h3>Đơn hàng</h3>
+                    <form class="row contact_form" action="~/home/dathang" method="post" novalidate="novalidate">
+                        <input type="hidden" name="productId" value="@ViewBag.id" />
+
+
+                        <div class="col-md-12 form-group">
+
+                            <select name="size" class="form-select">
+                                <option value=""> Chọn Size</option>
+                                @foreach (var item in ViewBag.prd)
+                                {
+                                    @foreach (var size in ViewBag.size)
+                                    {
+                                        if (item.Id_Size == size.Id)
+                                        {
+                                            <option value="@item.Id_Size"> @size.Name</option>
+                                           
+                                        }
+                                    }
+                                }
+                            </select>
+                        </div>
+                        <div class="col-md-12 form-group">
+                            <select name="color" class="form-select">
+                                <option value=""> Chọn Màu </option>
+                                @foreach (var item in ViewBag.prd)
+                                {
+                                    @foreach (var color in ViewBag.color)
+                                    {
+                                        if (item.Id_Color == color.Id)
+                                        {
+                                            <option value="@item.Id_Color"> @color.Name</option>
+                                         
+                                        }
+                                    }
+                                }
+                            </select>
+                           
+                        </div>
+                        <div class="col-md-4 form-group">
+                            <input type="text" class="form-control"  name="soluong" placeholder="Số lượng">
+                        </div>
+                        <div class="col-md-7 form-group">
+                            <input type="text" class="form-control"  name="sdt" placeholder="SDT">
+                        </div>
+                       
+                     
+                     
+                    
+                        <div class="col-md-12 form-group p_star">
+                            <div class="row">
+                                <div class="col-lg-4">
+                                    <select class="country_select" id="countrySelect" name="province">
+                                        @foreach (var item in ViewBag.province)
+                                        {
+                                            <option value="@item.ProvinceID">@item.ProvinceName</option>
+                                            
+
+                                        }
+
+                                    </select>
+                                    <input type="hidden" name="province2" value="" />
+                                </div>
+                                <div class="col-lg-4">
+
+                                    <input list="districtSelect" id="district" name="district" placeholder="Chọn quận huyện">
+                                    <datalist id="districtSelect">
+                                    </datalist>
+                                </div>
+                                <div class="col-lg-4">
+
+                                    <input list="wardSelect" id="ward" name="ward" placeholder="Chọn xã phường">
+                                    <datalist id="wardSelect">
+                                    </datalist>
+                                </div>
+                                <div class="col-md-12 form-group">
+                                    <input type="text" class="form-control" name="diachict" placeholder="Địa chỉ cụ thể">
+                                </div>
+                            </div>
+
+                        </div>
+
+
+                        <div class="col-md-12 form-group">
+                         
+                             
+                            
+                                <ul class="list list_2">
+                                   
+                                    <li><a href="#" style="text-decoration:none;color:black">Shipping <span><input width="30px" style="height:30px" readonly id="feeship" name="ship"></span></a></li>
+                                   
+                                </ul>
+                       
+                        </div>
+                        <div class="text-center  form-group">
+                            <button type="submit" class="button button-paypal">Order Confirmation</button>
+                        </div>
+
+                    </form>
+                </div>
+               
+
+
+
+            </div>
+        </div>
+    </div>
+</section>
+<!--================End Checkout Area =================-->
+<script>
+
+    // Lấy tham chiếu đến thẻ select bằng id
+    var select = document.getElementById("countrySelect");
+    var selectDistrict = document.getElementById("districtSelect");
+    var selectWard = document.getElementById("wardSelect");
+    var ldistrict= new Array();
+    var lward= new Array();
+    var iddis=0;
+    var idwar=0;
+    var inputdis = document.getElementById("district");
+    var inputward = document.getElementById("ward");
+    // Thêm một sự kiện onchange cho thẻ select
+    select.onchange = function () {
+        // Lấy giá trị được chọn trong thẻ select
+        var selectedCountry = select.value;
+        ldistrict.splice(0, ldistrict.length);
+        $("#districtSelect").empty(); // Xóa tất cả các thẻ option trong phần tử select có id là DropList
+        $("#wardSelect").empty();
+        inputdis.value="";
+        inputward.value="";
+        // Sử dụng fetch() để gửi một request GET đến /Home/GetUsers
+        fetch("/Home/district", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json"
+            }, provinceid: selectedCountry,
+            body: provinceid = selectedCountry
+        })
+            .then(response => response.json()) // Chuyển đổi response thành JSON
+            .then(data => {
+
+                // Xử lý dữ liệu JSON
+
+                data.forEach(function (districs) {
+                    ldistrict.push(districs);
+                    console.log(ldistrict);
+                    // Duyệt qua mảng các user
+                    var option = document.createElement("option"); // Tạo một phần tử option mới
+                    option.innerHTML = districs.districtID; // Gán giá trị cho option
+                    option.value = districs.districtName; // Gán nội dung hiển thị cho option
+                    selectDistrict.appendChild(option); // Thêm option vào thẻ select
+
+                });
+
+            })
+            .catch(error => {
+                // Xử lý lỗi
+                console.error(error); // In ra lỗi
+            });
+
+
+    };
+
+    //chọn phường
+    inputdis.onchange = function () {
+        // Lấy giá trị được chọn trong thẻ select
+        var district = 0;
+        lward.splice(0, ldistrict.length);
+        ldistrict.forEach(function(id){
+            if (id.districtName==inputdis.value){
+                district = id.districtID;
+                iddis = id.districtID;
+            }
+
+        });
+        console.log(iddis);
+        $("#wardSelect").empty(); // Xóa tất cả các thẻ option trong phần tử select có id là DropList
+
+
+        // Sử dụng fetch() để gửi một request GET đến /Home/GetUsers
+        fetch("/Home/ward", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json"
+            }, districtid: district,
+            body: districtid = district
+        })
+            .then(response => response.json()) // Chuyển đổi response thành JSON
+            .then(data => {
+
+                // Xử lý dữ liệu JSON
+
+                data.forEach(function (ward) {
+
+                    // Duyệt qua mảng các user
+                    var option = document.createElement("option"); // Tạo một phần tử option mới
+                    option.innerHTML = ward.wardCode; // Gán giá trị cho option
+                    option.value = ward.wardName; // Gán nội dung hiển thị cho option
+                    selectWard.appendChild(option); // Thêm option vào thẻ select
+                    lward.push(ward);
+
+
+                });
+            })
+            .catch(error => {
+                // Xử lý lỗi
+                console.error(error); // In ra lỗi
+            });
+    };
+
+
+    inputward.onchange = function () {
+        // Lấy giá trị được chọn trong thẻ select
+        var district = 0;
+        var ward= 0
+        lward.forEach(function (id) {
+            if (id.wardName == inputward.value) {
+
+                idwar = id.wardCode;
+              ward=id.wardCode;
+            }
+
+        });
+        var data = {
+            towardcode: ward,
+            to_district_id: iddis,
+        };
+        var json = JSON.stringify(data);
+        // Sử dụng fetch() để gửi một request GET đến /Home/GetUsers
+        fetch("/Home/Feeship", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json"
+            },
+            body: json
+        })
+            .then(response => response.json()) // Chuyển đổi response thành JSON
+            .then(data => {
+
+                // Xử lý dữ liệu JSON
+
+            console.log(data.total);
+
+
+                document.getElementById("feeship").value = data.total;
+            })
+            .catch(error => {
+                // Xử lý lỗi
+                console.error(error); // In ra lỗi
+            });
+    };
+
+
+    //function showLabel(input) {
+    //    // Lấy giá trị của input
+    //    var value = input.value;
+    //    // Lấy phần tử datalist tương ứng
+    //    var list = document.getElementById(input.getAttribute("list"));
+    //    // Duyệt qua các thẻ option trong datalist
+    //    for (var i = 0; i < list.options.length; i++) {
+    //        var option = list.options[i];
+    //        // Nếu giá trị của input trùng với giá trị của option
+    //        if (option.value === value) {
+    //            // Lấy nhãn của option
+    //            var label = option.label;
+    //            // Gán nhãn cho thuộc tính placeholder của input
+    //            input.placeholder = label;
+    //            // Thoát khỏi vòng lặp
+    //            break;
+    //        }
+    //    }
+    //}
+
+</script>
