--- a/APPVIEW/Views/QLBills/ShowBillXacNhan.cshtml
+++ b/APPVIEW/Views/QLBills/ShowBillXacNhan.cshtml
@@ -21,6 +21,12 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+<form asp-controller="QLBills" asp-action="ShowBillXacNhan" class="row contact_form" method="post">
+<div class="col-md-5 form-group">
+    <input type="text" class="form-control" name="search" placeholder="Nhập mã hóa đơn để tìm kiếm">
+    <button type="submit" style="background-color:brown ; color:black">Search</button>
+</div>
+</form>
 <table class="table">
     <thead>
         <tr>
