--- a/APPVIEW/Views/Home/Checkout.cshtml
+++ b/APPVIEW/Views/Home/Checkout.cshtml
@@ -132,42 +132,27 @@
                             <div class="payment_item">
                                 <div class="radion_btn">
                                     <input type="radio" id="f-option5" name="selector">
-                                    <label for="f-option5">Check payments</label>
+                                    <label for="f-option5">Thanh toán thường</label>
                                     <div class="check"></div>
                                 </div>
                                 <p>
-                                    Please send a check to Store Name, Store Street, Store Town, Store State / County,
-                                    Store Postcode.
+                                   Thanh toán khi kiểm tra và nhận hàng 
                                 </p>
                             </div>
                             <div class="payment_item active">
                                 <div class="radion_btn">
                                     <input type="radio" id="f-option6" name="selector">
-                                    <label for="f-option6">Paypal </label>
+                                    <label for="f-option6"> Thanh toán trực tuyến </label>
                                     <img src="img/product/card.jpg" alt="">
                                     <div class="check"></div>
                                 </div>
                                 <p>
-                                    Pay via PayPal; you can pay with your credit card if you don’t have a PayPal
-                                    account.
+                                    Thanh toán bằng ví vnpay 
                                 </p>
                             </div>
-                            <div class="creat_account">
-                                <input type="checkbox" id="f-option4" name="selector">
-                                <label for="f-option4">I’ve read and accept the </label>
-                          
-
-                            </div>
-                            <p>
-                                Pay via PayPal; you can pay with your credit card if you don’t have a PayPal
-                                account.
-                            </p>
+                         
                         </div>
-                        <div class="creat_account">
-                            <input type="checkbox" id="f-option4" name="selector">
-                            <label for="f-option4">I’ve read and accept the </label>
-                            <a href="#">terms & conditions*</a>
-                        </div>
+                       
 
                     </div>
                 </div>
