--- a/APPVIEW/Views/Address/GetList.cshtml
+++ b/APPVIEW/Views/Address/GetList.cshtml
@@ -8,7 +8,7 @@
 
 <div class="card">
     <div class="card-header">
-        <h5 class="mb-0">Roles</h5>
+        <h5 class="mb-0">Address</h5>
     </div>
     <div class="card-body">
         <a class="btn btn-success waves-effect waves-light" asp-action="Create">
