--- a/APPVIEW/Views/Size/GetList.cshtml
+++ b/APPVIEW/Views/Size/GetList.cshtml
@@ -8,7 +8,7 @@
 
 <div class="card">
     <div class="card-header">
-        <h5 class="mb-0">Roles</h5>
+        <h5 class="mb-0">Sizes</h5>
     </div>
     <div class="card-body">
         <a class="btn btn-success waves-effect waves-light" asp-action="Create">
@@ -55,7 +55,7 @@
                                 </td>
                                 <td>
                                     <span class="badge @(item.Status == 1 ? "badge rounded-pill bg-label-success" : "badge rounded-pill bg-label-danger")">
-                                        @(item.Status == 1 ? "Used" : "Not use")
+                                        @(item.Status == 1 ? "Using" : "Not use")
                                     </span>
                                 </td>
 
