--- a/APPVIEW/Views/Supplier/Edit.cshtml
+++ b/APPVIEW/Views/Supplier/Edit.cshtml
@@ -1,56 +1,75 @@
 ﻿@model APPDATA.Models.Supplier
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit-Supplier";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
-
-<h4>Supplier</h4>
-<hr />
+<h4 class="py-3 mb-4"><span class="text-muted fw-light">Forms /</span> Basic Inputs</h4>
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Suppliercode" class="control-label"></label>
-                <input asp-for="Suppliercode" class="form-control" />
-                <span asp-validation-for="Suppliercode" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Address" class="control-label"></label>
-                <input asp-for="Address" class="form-control" />
-                <span asp-validation-for="Address" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PhoneNumber" class="control-label"></label>
-                <input asp-for="PhoneNumber" class="form-control" />
-                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Desciption" class="control-label"></label>
-                <input asp-for="Desciption" class="form-control" />
-                <span asp-validation-for="Desciption" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
+    <div class="col-xxl">
+        <div class="card mb-4">
+            <div class="card-header d-flex align-items-center justify-content-between">
+                <h5 class="mb-0">Edit a Supplier</h5>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+            </div>
+            <div class="card-body">
+                <form asp-action="Edit" method="post">
+                    <div class="row mb-3">
+                        <label asp-for="Name" class="col-sm-2 col-form-label">Name Supplier</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" asp-for="Name" placeholder="Enter name of Supplier" />
+                            <span asp-validation-for="Name" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <label asp-for="Suppliercode" class="col-sm-2 col-form-label">Code</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" asp-for="Suppliercode" placeholder="Enter code of Supplier" />
+                            <span asp-validation-for="Suppliercode" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <label asp-for="PhoneNumber" class="col-sm-2 col-form-label">Phone number</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" asp-for="PhoneNumber" placeholder="Enter phone of Supplier" />
+                            <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <label asp-for="Address" class="col-sm-2 col-form-label">Address</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" asp-for="Address" placeholder="Enter address of Supplier" />
+                            <span asp-validation-for="Address" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <label asp-for="Desciption" class="col-sm-2 col-form-label">Desciption</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" asp-for="Desciption" placeholder="Enter address of Supplier" />
+                            <span asp-validation-for="Desciption" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="row justify-content-end">
+                        <div class="col-sm-10">
+                            <button type="submit" class="btn btn-primary">
+                                <span class="mdi mdi-check-outline"></span> Submit
+                            </button>
+                            <div class="btn-group ms-2">
+                                <a href="#" class="btn btn-danger waves-effect waves-light" onclick="goBack()">
+                                    <span class="mdi mdi-close"></span> Cancel
+                                </a>
+                                <script>
+                                    function goBack() {
+                                        window.history.back();
+                                    }
+                                </script>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
 
