--- a/APPVIEW/Views/Supplier/GetList.cshtml
+++ b/APPVIEW/Views/Supplier/GetList.cshtml
@@ -8,7 +8,7 @@
 
 <div class="card">
     <div class="card-header">
-        <h5 class="mb-0">Roles</h5>
+        <h5 class="mb-0">Suppliers</h5>
     </div>
     <div class="card-body">
         <a class="btn btn-success waves-effect waves-light" asp-action="Create">
@@ -22,8 +22,8 @@
                         <th>STT</th>
                         <th>Name</th>
                         <th>Code</th>
-                        <th>Code</th>
                         <th>Phone</th>
+                        <th>Address</th>
                         <th>Desciption</th>
                         <th>Actions</th>
                     </tr>
